--- a/app/src/main/res/layout/restaurant_list_item.xml
+++ b/app/src/main/res/layout/restaurant_list_item.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -18,13 +18,14 @@
                 android:layout_height="wrap_content" />
 
             <TextView
-                android:id="@+id/text_description"
+                android:id="@+id/text_category"
                 style="@style/TextAppearance.AppCompat.Body1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
             <ImageView
                 android:id="@+id/image_project"
+                android:layout_gravity="center"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:src="@mipmap/ic_launcher_round" />
