--- a/app/src/main/res/layout/tool_bar.xml
+++ b/app/src/main/res/layout/tool_bar.xml
@@ -6,8 +6,9 @@
     android:title="TEST">
 
     <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:text="미슐랭 서울"
-       android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:textAlignment="center" />
 
 </android.support.v7.widget.Toolbar>
