--- a/app/src/main/res/layout/filter.xml
+++ b/app/src/main/res/layout/filter.xml
@@ -68,43 +68,44 @@
         <TableRow>
 
             <CheckBox
-                android:id="@+id/grade_5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="bottom"
-                android:text="3스타" />
+                android:id="@+id/grade_1"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="@drawable/selector_grade1"
+                android:button="@null"
+                />
 
             <CheckBox
-                android:id="@+id/grade_4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="bottom"
-                android:text="2스타" />
+                android:id="@+id/grade_2"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="@drawable/selector_grade2"
+                android:button="@null"
+                />
 
             <CheckBox
                 android:id="@+id/grade_3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="bottom"
-                android:text="1스타"
-                android:textAlignment="gravity" />
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="@drawable/selector_grade3"
+                android:button="@null" />
         </TableRow>
 
         <TableRow>
 
             <CheckBox
-                android:id="@+id/grade_2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="bottom"
-                android:text="0.5스타" />
+                android:id="@+id/grade_4"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="@drawable/selector_grade4"
+                android:button="@null" />
 
             <CheckBox
-                android:id="@+id/grade_1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="bottom"
-                android:text="0스타" />
+                android:id="@+id/grade_5"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="@drawable/selector_grade5"
+                android:button="@null" />
         </TableRow>
     </TableLayout>
 </LinearLayout>
