--- a/app/src/main/res/layout/filter.xml
+++ b/app/src/main/res/layout/filter.xml
@@ -2,7 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#999"
     android:orientation="vertical">
 
     <TextView
@@ -61,51 +60,47 @@
         android:text="@string/string_grade" />
 
 
-    <TableLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp">
+        <CheckBox
+            android:id="@+id/grade_1"
+            android:layout_width="50dp"
+            android:layout_height="30dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/selector_grade1"
+            android:button="@null" />
 
-        <TableRow>
+        <CheckBox
+            android:id="@+id/grade_2"
+            android:layout_width="40dp"
+            android:layout_height="30dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/selector_grade2"
+            android:button="@null" />
 
-            <CheckBox
-                android:id="@+id/grade_1"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:background="@drawable/selector_grade1"
-                android:button="@null"
-                />
+        <CheckBox
+            android:id="@+id/grade_3"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/selector_grade3"
+            android:button="@null" />
 
-            <CheckBox
-                android:id="@+id/grade_2"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:background="@drawable/selector_grade2"
-                android:button="@null"
-                />
+        <CheckBox
+            android:id="@+id/grade_4"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/selector_grade4"
+            android:button="@null" />
 
-            <CheckBox
-                android:id="@+id/grade_3"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:background="@drawable/selector_grade3"
-                android:button="@null" />
-        </TableRow>
-
-        <TableRow>
-
-            <CheckBox
-                android:id="@+id/grade_4"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:background="@drawable/selector_grade4"
-                android:button="@null" />
-
-            <CheckBox
-                android:id="@+id/grade_5"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:background="@drawable/selector_grade5"
-                android:button="@null" />
-        </TableRow>
-    </TableLayout>
+        <CheckBox
+            android:id="@+id/grade_5"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/selector_grade5"
+            android:button="@null" />
+    </LinearLayout>
 </LinearLayout>
