--- a/app/src/main/res/layout/tool_bar.xml
+++ b/app/src/main/res/layout/tool_bar.xml
@@ -3,7 +3,7 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="?android:attr/actionBarSize"
-    android:background="#ff0000">
+    android:background="#A83238">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -14,6 +14,8 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_centerVertical="true"
+            android:textColor="#fff"
+            android:textSize="24sp"
             android:text="@string/string_toolbar_name"
             android:textAlignment="center" />
     </RelativeLayout>
