--- a/app/src/main/res/layout/tool_bar.xml
+++ b/app/src/main/res/layout/tool_bar.xml
@@ -1,10 +1,12 @@
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="?android:attr/actionBarSize"
+    android:background="#A83238"
     app:theme="@style/ToolbarWhiteIcon"
-    android:background="#A83238">
+    tools:ignore="MissingPrefix">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -12,15 +14,16 @@
         android:layout_marginEnd="20dp">
 
         <TextView
+            android:id="@+id/toolbar_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_centerVertical="true"
             android:layout_marginEnd="20dp"
-            android:textColor="#fff"
-            android:textSize="24sp"
             android:text="@string/string_toolbar_name"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textColor="#fff"
+            android:textSize="24sp" />
     </RelativeLayout>
 
 </android.support.v7.widget.Toolbar>
