--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,13 +12,13 @@
         <item name="android:textColorSecondary">#FFFFFF</item>
     </style>
 
-    <style name="EditTextStyle" parent="Widget.AppCompat.EditText">
-
-    </style>
-
     <style name="SplashTheme" parent="AppTheme">
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowBackground">@drawable/splash</item>
+    </style>
+
+    <style name="customFont">
+        <item name="fontPath">fonts/BMYEONSUNG.otf</item>
     </style>
 
 </resources>
